# CG-2

./: .gitignore  CG-2.sln  CG-2.vcxproj  CG-2.vcxproj.filters  CMakeLists.txt  engine.h  error_logger.cpp  error_logger.h  render_window.cpp  render_window.h  string_converter.cpp  string_converter.h  window_container.cpp  window_container.h
Graphics/: adapter_reader.cpp  adapter_reader.h  graphics.cpp  graphics.h  shaders.cpp  shaders.h  vertex.h
KatamariDamacy/: CG-2.vcxproj  CG-2.vcxproj.filters  com_exception.h  engine.cpp  engine.h  error_logger.cpp  error_logger.h  imgui.ini  main.cpp  pixelshader.hlsl  pixelshader_deferred.hlsl  pixelshader_depth.hlsl  pixelshader_dirlight_pass.hlsl  pixelshader_dynamic_point_light.hlsl  pixelshader_light.hlsl  pixelshader_nolight.hlsl  pixelshader_pointlight_pass.hlsl  pixelshader_shadow.hlsl  render_window.cpp  render_window.h  resource.h  string_converter.h  string_helper.cpp  string_helper.h  vertexshader.hlsl  vertexshader_deferred.hlsl  vertexshader_depth.hlsl  vertexshader_dirlight_pass.hlsl  vertexshader_pointlight_pass.hlsl  vertexshader_shadow.hlsl  window_container.cpp  window_container.h
KatamariDamacy/Game/: game_object.cpp  game_object.h  katamari_thing.cpp  katamari_thing.h  landscape.cpp  landscape.h  renderable_game_object.cpp  renderable_game_object.h
KatamariDamacy/Graphics/: adapter_reader.cpp  adapter_reader.h  camera.cpp  mesh.h  (+32 more)
Keyboard/: keyboard_class.cpp  keyboard_class.h  keyboard_event.cpp  keyboard_event.h
Mouse/: mouse_class.cpp  mouse_class.h  mouse_event.cpp  mouse_event.h
x64/: .gitignore
(+17 files in other folders)
